Redid safety valve implementation Now goes via same codepath as security upgrade handling